--- a/GitHubApp/.travis.yml
+++ b/GitHubApp/.travis.yml
@@ -1,9 +1,3 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode8.3
 language: swift
-
-script:
-- xcodebuild -target GitHubApp -scheme GitHubApp -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+xcode_project: GitHubApp/GitHubApp.xcodeproj
+xcode_scheme: GitHubApp
