--- a/GitHubApp/.travis.yml
+++ b/GitHubApp/.travis.yml
@@ -1,3 +1,3 @@
 language: swift
-xcode_project: GitHubApp/GitHubApp.xcodeproj
+xcode_project: git-hub-search-app/GitHubApp/GitHubApp.xcodeproj
 xcode_scheme: GitHubApp
