--- a/GitHubApp/.travis.yml
+++ b/GitHubApp/.travis.yml
@@ -1,3 +1,5 @@
+osx_image: xcode8.3
 language: swift
-xcode_project: git-hub-search-app/GitHubApp/GitHubApp.xcodeproj
-xcode_scheme: GitHubApp
+
+script:
+- xcodebuild -project GitHubApp.xcodeproj -alltargets -configuration Release
